--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <body>
 
-    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header"><!--Para añadir el icono de menú-->
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
