--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa in quae repellendus saepe. Ducimus ex iure quibusdam quidem recusandae sequi unde? Ab cupiditate delectus error minima, non nulla reiciendis similique.
                     </p>
                     <div class="contenedor-botones ">
-                        <a href="" class="btn btn-info">Leer más</a>
+                        <a href="" class="btn btn-danger">Leer más</a>
                         <a href="" class=" btn btn-success">Comentarios<span class="badge">40</span></a>
                     </div>
                 </article>
