--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md-6">John Smith</div>
+                <div class="col-md-6">Nestor</div>
 
                 <div class="col-md-6">
                     <ul class="list-inline text-right">
